--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,15 @@
 </head>
 <body>
 
+<% flash.each do |name, msg| %>
+  <div class="alert alert-success alert-dismissible alert-#{name}" role="alert">
+    	<button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+    	<strong><%= msg %></strong>
+  </div>
+<% end %>
+
+<%= render "layouts/header" %>
+
 <%= yield %>
 
 </body>
