--- a/app/views/ideas/index.html.erb
+++ b/app/views/ideas/index.html.erb
@@ -1,10 +1,13 @@
 <h1>Listing Ideas</h1>
 <%= link_to 'New Idea', new_idea_path %>
     <% @ideas.each do |idea| %>
-    <div class =  "forum-box bg-info col-md-8 col-md-offset-2" style = "margin-top: 10px;">
+    <div class =  "bg-info col-md-8 col-md-offset-2" style = "margin-top: 10px;">
       <div class="page-header">
         <%= link_to idea.name, idea %>
         <%= idea.description %>
+        <% if idea.user %>
+          <%= idea.user.email %>
+        <% end %>
         <% if idea.user == current_user %>
           <%= link_to 'Edit', edit_idea_path(idea) %>
           <%= link_to 'Destroy', idea, method: :delete, data: { confirm: 'Are you sure?' } %>
