Added University to Users

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -15,6 +15,10 @@
     <%= f.label :last_name %><br />
     <%= f.text_field :last_name, autofocus: true %>
   </div>
+  <div class = "field">
+    <%= f.label :college %><br />
+    <%= f.text_field :college, autofocus: true %>
+  </div>
 
   <div class="field">
     <%= f.label :password %>
