--- a/app/views/ideas/index.html.erb
+++ b/app/views/ideas/index.html.erb
@@ -4,10 +4,11 @@
     <div class =  "bg-info col-md-8 col-md-offset-2" style = "margin-top: 10px;">
       <div class="page-header">
         <%= link_to idea.name, idea %>
-        <%= idea.description %>
+        <%= idea.tagline %>
         <% if idea.user %>
           <%= idea.user.email %>
         <% end %>
+        <%= idea.description %>
         <% if idea.user == current_user %>
           <%= link_to 'Edit', edit_idea_path(idea) %>
           <%= link_to 'Destroy', idea, method: :delete, data: { confirm: 'Are you sure?' } %>
