--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -19,6 +19,18 @@
     <%= f.label :college %><br />
     <%= f.text_field :college, autofocus: true %>
   </div>
+  <div class = "field">
+    <%= f.label :bio %><br />
+    <%= f.text_field :bio, autofocus: true %>
+  </div>
+  <div class = "field">
+    <%= f.label :values %><br />
+    <%= f.text_field :values, autofocus: true %>
+  </div>
+  <div class = "field">
+    <%= f.label :interests %><br />
+    <%= f.text_field :interests, autofocus: true %>
+  </div>
 
   <div class="field">
     <%= f.label :password %>
