--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -8,6 +8,10 @@
     <%= f.email_field :email, autofocus: true %>
   </div>
   <div class = "field">
+    <%= f.label :username %><br />
+    <%= f.text_field :username, autofocus: true %>
+  </div>
+  <div class = "field">
     <%= f.label :first_name %><br />
     <%= f.text_field :first_name, autofocus: true %>
   </div>
@@ -22,6 +26,10 @@
   <div class = "field">
     <%= f.label :bio %><br />
     <%= f.text_field :bio, autofocus: true %>
+  </div>
+  <div class="form-group">
+    <%= f.label :image %>
+    <%= f.file_field :image, class: "form-control" %>
   </div>
   <div class = "field">
     <%= f.label :values %><br />
