--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,11 +1,15 @@
 <h2>Sign up</h2>
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+<%= form_for(resource, as: resource_name, url: registration_path(resource_name)), html: { multipart: true } do |f| %>
   <%= devise_error_messages! %>
 
   <div class="field">
     <%= f.label :email %><br />
     <%= f.email_field :email, autofocus: true %>
+  </div>
+  <div class = "field">
+    <%= f.label :username %><br />
+    <%= f.text_field :username, autofocus: true %>
   </div>
   <div class = "field">
     <%= f.label :first_name %><br />
@@ -14,6 +18,10 @@
   <div class = "field">
     <%= f.label :last_name %><br />
     <%= f.text_field :last_name, autofocus: true %>
+  </div>
+  <div class="form-group">
+    <%= f.label :image %>
+    <%= f.file_field :image, class: "form-control" %>
   </div>
   <div class = "field">
     <%= f.label :college %><br />
