--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,5 +1,5 @@
 <h1><%= @user.first_name %> <%= @user.last_name %></h1>
-
+<%= image_tag @user.image.url(:medium) %>
 <%= @user.college %>
 <%= @user.bio %>
 <%= @user.values %>
